--- a/dst/manifest.json
+++ b/dst/manifest.json
@@ -11,7 +11,8 @@
 
 	"content_scripts": [
 		{
-			"matches": ["https://www.google.com/maps/*"],
+			"matches": ["http://*/*", "https://*/*"],
+			"include_globs": ["http://www.google.*/maps/*", "https://www.google.*/maps/*"],
 			"run_at": "document_end",
 			"js": ["content-script.js"]
 		}
